tests/enum_from/compile_fail/variant/missing_attribute.stderr
error[E0004]: non-exhaustive patterns: `Source::Foo` not covered
 --> tests/enum_from/compile_fail/variant/missing_attribute.rs:7:10
  |
7 | #[derive(EnumFrom)]
  |          ^^^^^^^^ pattern `Source::Foo` not covered
  |
note: `Source` defined here
 --> tests/enum_from/compile_fail/variant/missing_attribute.rs:3:6
  |
3 | enum Source {
  |      ^^^^^^
4 |     Foo,
  |     --- not covered
  = note: the matched value is of type `Source`
  = note: this error originates in the derive macro `EnumFrom` (in Nightly builds, run with -Z macro-backtrace for more info)
